Add: composerインストール処理

--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -1,4 +1,6 @@
 FROM php:7.3-fpm
 
+COPY --from=composer:1.10 /usr/bin/composer /usr/bin/composer
+
 # zz-docker.confの設定を上書きするためファイル名zzz-www.confとしてコピー
 COPY ./www.conf /usr/local/etc/php-fpm.d/zzz-www.conf
