--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -1,18 +1,33 @@
 server {
   listen *:80 default_server;
   server_name localhost;
+  root /work/backend/public;
 
-  root /work/backend;
-  index index.php index.html;
+  add_header X-Frame-Options "SAMEORIGIN";
+  add_header X-XSS-Protection "1; mode=block";
+  add_header X-Content-Type-Options "nosniff";
 
-  error_page 500 502 503 504 /50x.html;
-  location /50x.html {
-    root /usr/share/nginx/html;
+  index index.html index.htm index.php;
+
+  charset utf-8;
+
+  location / {
+      try_files $uri $uri/ /index.php?$query_string;
   }
 
+  location = /favicon.ico { access_log off; log_not_found off; }
+  location = /robots.txt  { access_log off; log_not_found off; }
+
+  error_page 404 /index.php;
+
   location ~ \.php$ {
-    fastcgi_pass unix:/var/run/php-fpm/php-fpm.sock;
-    include /etc/nginx/fastcgi_params;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      fastcgi_pass unix:/var/run/php-fpm/php-fpm.sock;
+      fastcgi_index index.php;
+      fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+      include fastcgi_params;
+  }
+
+  location ~ /\.(?!well-known).* {
+      deny all;
   }
 }
