--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -2,10 +2,9 @@ FROM php:7.3-fpm-alpine
 SHELL ["/bin/ash", "-oeux", "pipefail", "-c"]
 
 RUN apk upgrade --update && \
-  apk --no-cache add tzdata zip
-
-    # change timezone UTC to JST
-RUN cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
+  apk --no-cache add tzdata zip && \
+  # change timezone UTC to JST
+  cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
   echo "Asia/Tokyo" > /etc/timezone && \
   apk del tzdata && \
   # add composer
