--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,17 +2,17 @@ version: "3.8"
 
 services:
   web:
-    build: ./infra/docker/nginx
+    build: ./nginx
     volumes:
-      - ./backend:/work/backend
+      - ../backend:/work/backend
       - php-fpm-socket:/var/run/php-fpm
     ports:
       - "8080:80"
 
   app:
-    build: ./infra/docker/php
+    build: ./php
     volumes:
-      - ./backend:/work/backend
+      - ../backend:/work/backend
       - php-fpm-socket:/var/run/php-fpm
 
 volumes:
