Add: DBマイグレーション用makeコマンド

--- a/infra/Makefile
+++ b/infra/Makefile
@@ -1,2 +1,4 @@
+migrate:
+	docker-compose exec app php artisan migrate
 sql:
 	docker-compose exec db bash -c 'mysql --user=$$MYSQL_USER --password=$$MYSQL_PASSWORD --database=$$MYSQL_DATABASE'
