--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,7 +1,12 @@
 server {
-  listen *:80 default_server;
+  listen *:80;
+  listen *:443 ssl;
+
   server_name localhost;
   root /work/backend/public;
+
+  ssl_certificate /etc/nginx/ssl/cert.crt;
+  ssl_certificate_key  /etc/nginx/ssl/cert.key;
 
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-XSS-Protection "1; mode=block";
