--- a/infra/Makefile
+++ b/infra/Makefile
@@ -8,3 +8,5 @@ migrate:
 	docker-compose exec app php artisan migrate
 sql:
 	docker-compose exec db bash -c 'mysql --user=$$MYSQL_USER --password=$$MYSQL_PASSWORD --database=$$MYSQL_DATABASE'
+composer-install:
+	docker-compose run composer composer install
