Fix: composerコンテナでcomposer installを指定して実行できない問題
ENTRYPOINTではdocker runなどでコマンドを指定できないため

--- a/infra/composer/Dockerfile
+++ b/infra/composer/Dockerfile
@@ -6,4 +6,4 @@ RUN php -r "readfile('http://getcomposer.org/installer');" | php -- --install-di
 
 WORKDIR /work/backend
 
-ENTRYPOINT ["echo", "This container is not for daemon and will exit."]
+CMD ["echo", "This container is not for daemon and will exit."]
