--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,6 +31,11 @@ services:
     volumes:
       - db-store:/var/lib/mysql
 
+  node:
+    build: ./node
+    volumes:
+      - ../backend:/work/backend
+
 volumes:
   php-fpm-socket:
   db-store:
