Change: DBコンテナの環境変数
既存のyoufolioプロジェクトの設定に合わせるため、mysqlのログインに関係する以下の項目の変更
・ルートユーザのパスワード
・デフォルトユーザのユーザ名、パスワード
・デフォルトデータベース名

--- a/infra/mysql/Dockerfile
+++ b/infra/mysql/Dockerfile
@@ -2,9 +2,9 @@ FROM mysql:8.0.21
 SHELL ["/bin/bash", "-oeux", "pipefail", "-c"]
 
 ENV TZ=Asia/Tokyo \
-  MYSQL_ROOT_PASSWORD=secret \
-  MYSQL_DATABASE=youfolio-db \
-  MYSQL_USER=youfolio-developer \
-  MYSQL_PASSWORD=secret
+  MYSQL_ROOT_PASSWORD=mydb1234 \
+  MYSQL_DATABASE=mydb \
+  MYSQL_USER=mydb \
+  MYSQL_PASSWORD=mydb1234
 
 COPY ./myopt.cnf /etc/mysql/conf.d/myopt.cnf
