Add: DBコンテナの公開ポート

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -30,6 +30,8 @@ services:
     build: ./mysql
     volumes:
       - db-store:/var/lib/mysql
+    ports:
+      - 3306:3306
 
   node:
     build: ./node
