Add: DB構築用makeコマンド
以下の三つのコマンドを実行
・DBマイグレーション
・シーディング 
・Laravel passportの公開/秘密鍵生成

--- a/infra/Makefile
+++ b/infra/Makefile
@@ -23,6 +23,10 @@ refresh:
 	docker-compose exec app php artisan migrate:refresh
 passport-install:
 	docker-compose exec app php artisan passport:install
+construct:
+	@make migrate
+	@make seed
+	@make passport-install
 reconstruct:
 	@make refresh
 	@make seed
