--- a/infra/Makefile
+++ b/infra/Makefile
@@ -1,6 +1,10 @@
 # コンテナ
 up:
 	docker-compose -f docker-compose.yml -f docker-compose-dev.yml up
+down:
+	docker-compose down
+build:
+	docker-compose build
 
 # 端末ログイン
 web:
