--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -5,8 +5,8 @@ server {
   server_name localhost;
   root /work/backend/public;
 
-  ssl_certificate /etc/nginx/ssl/cert.crt;
-  ssl_certificate_key  /etc/nginx/ssl/cert.key;
+  ssl_certificate /etc/nginx/ssl/server.crt;
+  ssl_certificate_key  /etc/nginx/ssl/server.key;
 
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-XSS-Protection "1; mode=block";
