--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - 80:80
       - 443:443
 
-  app:
-    build: ./php
+  fpm:
+    build: ./fpm
     volumes:
       - ../backend:/work/backend
       - php-fpm-socket:/var/run/php-fpm
