Change: コンテナ起動用makeコマンド
開発用composeファイル（docker-compose-devファイル）を削除したため

--- a/infra/Makefile
+++ b/infra/Makefile
@@ -1,6 +1,6 @@
 # コンテナ
 up:
-	docker-compose -f docker-compose.yml -f docker-compose-dev.yml up
+	docker-compose up
 down:
 	docker-compose down
 build:
