Change: workerコンテナのデフォルト実行プロセス
ジョブ処理のデバッグしやすさのため、コードの変更を再起動なしで反映してくれるlistenに変更

--- a/services/worker/Dockerfile
+++ b/services/worker/Dockerfile
@@ -25,4 +25,4 @@ RUN apk upgrade --update && \
 
 WORKDIR /work/backend
 
-CMD ["php", "artisan", "queue:work"]
+CMD ["php", "artisan", "queue:listen"]
